[package]
name = "c_struct_layout"
version = "0.1.1"
edition = "2018"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A library for enforcing stable, C-compatible data layouts in Rust."
license = "MIT"
homepage = "https://github.com/bensatlantik/c_struct_layout"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
