[package]
name = "hex_to_rgb"
version = "0.1.2"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2018"
description = "A simple Rust library to convert hex color codes to RGB values."
license = "MIT"
homepage = "https://github.com/bensatlantik/hex_to_rgb"
documentation = "https://docs.rs/hex_to_rgb"
readme = "README.md"
keywords = ["hex", "color", "RGB", "conversion"]
categories = ["graphics"]

[dependencies]
# (Add dependencies if needed)
