[package]
name = "imgcore"
version = "0.1.2"
authors = ["Ben Santora <bensatlantik@gmail.com"]
edition = "2021"
license = "MIT"
description = "A beginner-friendly, lightweight Rust library for basic image manipulation."

[dependencies]
image = "0.24"  # Ensures we can load, save, resize, crop images
