[package]
name = "linux_minishell"
version = "0.1.8"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2021"
description = "A minimal, Bash-like shell written in Rust"
license = "MIT"
readme = "README.md"
keywords = ["shell", "rust", "command-line", "bash"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0"
dirs-next = "2.0"