[package]
name = "ms_to_secs"
version = "0.1.2"
authors = ["Ben Santora <bensatlantik@gmail.com"]
edition = "2018"
description = "A simple Rust library to convert milliseconds to seconds."
license = "MIT"
homepage = "https://github.com/bensatlantik/ms_to_secs"
documentation = "https://docs.rs/ms_to_secs"
readme = "README.md"
keywords = ["time", "conversion", "milliseconds", "seconds"]
categories = ["no-std"]
