[package]
name = "riscv_ai_infer"
version = "0.1.2"
edition = "2021"
authors = ["bensatlantik <bensatlantik@gmail.com>"]
license = "MIT"
description = "A Rust-based lightweight inference engine optimized for RISC-V boards"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
nalgebra = "0.32"