[package]
name = "riscv_sysmon"
version = "0.1.1"
edition = "2021"
authors = ["Ben Santora bensatlantik@gmail.com"]
description = "System monitoring tool for RISC-V Linux SBCs, providing insights into CPU, memory, and system health."
license = "MIT"

[dependencies]
sysinfo = "0.28" # for system metrics
chrono = "0.4"   # for time-based functionality
structopt = "0.3" # for CLI argument parsing
structopt-derive = "0.3"

[badges]
travis-ci = { repository = "github.com/bensatlantik/riscv_sysmon" }

[profile.release]
opt-level = "z" # Smaller binary size optimization
