[package]
name = "sysinfo_linux"
version = "0.1.4"
edition = "2021"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A Rust library for retrieving Linux system information, including kernel version, uptime, available memory, and network interface statistics."
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
